# boxset

./: .gitignore  LICENCE  README.rst  pyproject.toml
boxset/: coords.py  domain_decomposition.py  rhs.py  simulation.py  timeloop.py
boxset/conservation_laws/: adi_sbox.py  burgers.py  dust_boltz.py  euler_1d.py  euler_2d.py  iso_2d_dust.py  iso_sbox.py  isothermal_euler_1d.py  scalar_advection.py  tva_sbox.py  vsi_globalz.py
boxset/conservation_laws/basic/: burgers.py  euler_1d.py  euler_2d.py  euler_3d.py  isothermal_euler_1d.py  isothermal_euler_2d.py  isothermal_euler_3d.py  scalar_advection.py
boxset/output/: basic.py  parallel.py
boxset/reconstruction/: cweno_3rd.py  cweno_3rd_compact.py  weno_3rd.py  weno_5th.py  weno_7th.py  weno_ao_53.py  weno_ao_73.py
boxset/remap/: remap_dummy.py  remap_sbox.py
boxset/timesteppers/: euler.py  rk2.py  rk3.py  rk4.py
boxset/utils/: kolmogorov_noise.py  utils.py
examples/: dust_boltz.py  profile.py  sbox.py  scalar_advection.py  sod.py  stratified_si.py  streaming_instability.py  tva_vsi.py  vsi.py  windtunnel.py  zvi.py
